props and state

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,6 +1,7 @@
 footer {
     height: 10vh;
     background-color: #a8a8a8;
+    margin-top: 3px;
     p {
         height: 100%;
         display: flex;
